AC_INIT(cantera-cas,1.0.0)

AC_CANONICAL_TARGET
AC_USE_SYSTEM_EXTENSIONS

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_GNU_SOURCE

AC_CONFIG_HEADERS([config.h])
AC_OUTPUT([Makefile])
