AC_INIT([ca-cas], [1.1.0])
AM_INIT_AUTOMAKE([-Wall foreign subdir-objects])

AC_CONFIG_MACRO_DIR([m4])

AM_MAINTAINER_MODE([disable])

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

PKG_CHECK_MODULES([CAPNP], [capnp >= 0.6])
PKG_CHECK_MODULES([CAPNP_RPC], [capnp-rpc >= 0.6])
PKG_CHECK_MODULES([CRYPTO], [libcrypto])
PKG_CHECK_MODULES([LIBCOLUMNFILE], [libcolumnfile])
PKG_CHECK_MODULES([YAML], [yaml-cpp >= 0.5])

AM_PROG_AR
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

LT_INIT

AC_LANG_PUSH([C++])
AX_CXX_COMPILE_STDCXX_14([], [])
AC_LANG_POP([C++])

AC_CONFIG_FILES([Makefile ca-cas.pc])
AC_OUTPUT
